# qt_calculator

./: CMakeLists.txt  README.md  calculator.cpp  calculator.h  main.cpp
